dropshot/tests/fail/bad_endpoint11.stderr
error: Endpoint handlers must have the following signature:
           async fn(
               rqctx: std::sync::Arc<dropshot::RequestContext<MyContext>>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody<J>,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_endpoint11.rs:13:1
   |
13 | async fn bad_no_result(_: Arc<RequestContext<()>>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error: Endpoint must return a Result
  --> tests/fail/bad_endpoint11.rs:13:1
   |
13 | async fn bad_no_result(_: Arc<RequestContext<()>>) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
